# marvin

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  classmarvin_1_1audiobasics_1_1SwapBuffer-members.html  classmarvin_1_1audiobasics_1_1SwapBuffer.html  classmarvin_1_1containers_1_1FixedCircularBuffer-members.html  classmarvin_1_1containers_1_1FixedCircularBuffer.html  classmarvin_1_1containers_1_1StrideView-members.html  classmarvin_1_1containers_1_1StrideView.html  classmarvin_1_1containers_1_1StrideView_1_1const__iterator-members.html  classmarvin_1_1containers_1_1StrideView_1_1const__iterator.html  classmarvin_1_1containers_1_1StrideView_1_1iterator-members.html  classmarvin_1_1containers_1_1StrideView_1_1iterator.html  classmarvin_1_1containers_1_1SwapBuffer-members.html  classmarvin_1_1containers_1_1SwapBuffer.html  classmarvin_1_1containers_1_1fifos_1_1FIFO-members.html  classmarvin_1_1containers_1_1fifos_1_1FIFO.html  classmarvin_1_1containers_1_1fifos_1_1FIFO.js  classmarvin_1_1containers_1_1fifos_1_1SPSC-members.html  classmarvin_1_1containers_1_1fifos_1_1SPSC.html  classmarvin_1_1dsp_1_1DelayLine-members.html  classmarvin_1_1dsp_1_1DelayLine.html  classmarvin_1_1dsp_1_1filters_1_1Biquad-members.html  classmarvin_1_1dsp_1_1filters_1_1Biquad.html  classmarvin_1_1dsp_1_1filters_1_1LPF-members.html  classmarvin_1_1dsp_1_1filters_1_1LPF.html  classmarvin_1_1dsp_1_1filters_1_1LatticeAPF-members.html  classmarvin_1_1dsp_1_1filters_1_1LatticeAPF.html  classmarvin_1_1dsp_1_1filters_1_1SIMDBiquad-members.html  classmarvin_1_1dsp_1_1filters_1_1SIMDBiquad.html  classmarvin_1_1dsp_1_1filters_1_1SIMDBiquad.js  classmarvin_1_1dsp_1_1filters_1_1SVF-members.html  classmarvin_1_1dsp_1_1filters_1_1SVF.html  classmarvin_1_1dsp_1_1filters_1_1SmoothedBiquadCoefficients-members.html  classmarvin_1_1dsp_1_1filters_1_1SmoothedBiquadCoefficients.html  (+259 more)
.github/workflows/: cmake-single-platform.yml  doxygen-gh-pages.yml  unit-test.yml
cmake/: marvin-config.in
docs/: CMakeLists.txt  marvin_NamespaceDocs.h
include/: CMakeLists.txt
include/marvin/audio_basics/: marvin_Buffer.h  marvin_BufferView.h
include/marvin/containers/: marvin_BufferView.h  marvin_FIFO.h  marvin_FixedCircularBuffer.h  marvin_StrideView.h  marvin_SwapBuffer.h
include/marvin/dsp/: marvin_DelayLine.h
include/marvin/dsp/filters/: marvin_APF.h  marvin_LPF.h  marvin_SVF.h
include/marvin/dsp/filters/biquad/: marvin_Biquad.h  marvin_BiquadCoefficients.h  marvin_RBJCoefficients.h  marvin_SIMDBiquad.h  marvin_SmoothedBiquadCoefficients.h
include/marvin/dsp/oscillators/: marvin_Oscillator.h
include/marvin/dsp/spectral/: marvin_FFT.h
include/marvin/filters/: marvin_APF.h  marvin_LPF.h
include/marvin/math/: marvin_Conversions.h  marvin_Interpolators.h  marvin_LeakyIntegrator.h  marvin_Math.h  marvin_MixMatrix.h  marvin_Reciprocal.h  marvin_SIMDOps.h  marvin_VecOps.h  marvin_WindowedSincInterpolator.h  marvin_Windows.h
include/marvin/memory/: marvin_Pool.h  marvin_PoolAllocator.h
include/marvin/oscillators/: marvin_Oscillator.h
include/marvin/utils/: marvin_DisableWarnings.h  marvin_FIFO.h  marvin_FormatReader.h  marvin_LinearSmoothedValue.h  marvin_MemoryPool.h  marvin_MixMatrix.h  marvin_Random.h  marvin_Range.h  marvin_ReenableWarnings.h  marvin_SmoothedValue.h  marvin_Stopwatch.h  marvin_Utils.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  concepts_0.js  enums_0.js  enums_2.js  enums_5.js  enumvalues_0.js  (+43 more)
source/: CMakeLists.txt
source/audio_basics/: marvin_Buffer.h  marvin_BufferView.cpp
source/containers/: marvin_BufferView.cpp  marvin_FIFO.cpp  marvin_FixedCircularBuffer.cpp  marvin_StrideView.cpp  marvin_SwapBuffer.cpp
source/dsp/: marvin_DelayLine.cpp  marvin_DelayLine.h  marvin_Oscillator.h
source/dsp/filters/: marvin_APF.cpp  marvin_LPF.cpp  marvin_RBJCoefficients.cpp  marvin_SVF.cpp
source/dsp/filters/biquad/: marvin_Biquad.cpp  marvin_BiquadCoefficients.cpp  marvin_RBJCoefficients.cpp  marvin_SIMDBiquad.cpp  marvin_SmoothedBiquadCoefficients.cpp
source/dsp/oscillators/: marvin_Oscillator.cpp
source/dsp/spectral/: marvin_FFT.cpp
source/filters/: marvin_APF.cpp  marvin_APF.h  marvin_LPF.cpp  marvin_LPF.h
source/math/: marvin_Conversions.cpp  marvin_Interpolators.cpp  marvin_LeakyIntegrator.cpp  marvin_LeakyIntegrator.h  marvin_Math.cpp  marvin_MixMatrix.cpp  marvin_Reciprocal.cpp  marvin_VecOps.cpp  marvin_Windows.cpp
source/oscillators/: marvin_Oscillator.cpp  marvin_Oscillator.h
source/utils/: marvin_LinearSmoothedValue.cpp  marvin_LinearSmoothedValue.h  marvin_Random.cpp  marvin_Random.h  marvin_Range.cpp  marvin_SmoothedValue.cpp  marvin_Stopwatch.cpp  marvin_Utils.cpp
tests/: CMakeLists.txt
tests/audio_basics/: marvin_SwapBufferTests.cpp
tests/containers/: marvin_AudioBufferTests.cpp  marvin_FixedCircularBufferTests.cpp  marvin_StrideViewTests.cpp  marvin_SwapBufferTests.cpp
tests/dsp/filters/: marvin_APFTests.cpp  marvin_SVFTests.cpp
tests/dsp/filters/biquad/: marvin_BiquadTests.cpp  marvin_SIMDBiquadTests.cpp  marvin_SmoothedBiquadCoefficientsTests.cpp
tests/dsp/oscillators/: marvin_OscillatorTests.cpp
tests/dsp/spectral/: marvin_FFTTests.cpp
tests/math/: marvin_ConversionTests.cpp  marvin_MathTests.cpp  marvin_VecOpsTests.cpp  marvin_WindowedSincInterpolatorTests.cpp  marvin_WindowsTests.cpp
tests/oscillators/: marvin_OscillatorTests.cpp
tests/resources/: break.wav.reapeaks
tests/utils/: marvin_FIFOTests.cpp  marvin_FormatReaderTests.cpp  marvin_MemoryPoolTests.cpp  marvin_SmoothedValueTests.cpp  marvin_UtilsTests.cpp
